--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,396 @@
 <html>
-<header>
+	<head>
+		<title>
+			Ruben's Portfolio
+		</title>
+		<style>
+			body, html {
+				background-image: url("http://rubenhetpaardje.info/portfolio/SkyBackground.png");
+				background-size:cover
+				background-repeat: no-repeat;
+				background-attachment: fixed;
+			}
+		
+			#TopBanner {
+				height: auto;
+				width: auto;
+				background-color:#ffffff88;
+				margin-left: 5%;
+				margin-right: 5%;
+				box-shadow: 4px 4px 0px #aaaaaa88;
+			}
+			#TopText {
+				font-family: impact;
+				font-size: 70;
+				color: white;
+				letter-spacing: 3px;
+				margin-left: 50px;
+			}
+			
+			#ColumnHolder {
+				height: 1000px;
+				width: auto;
+				background-color:#ffffff88;
+				margin-right: 12%;
+				margin-top: 2%;
+				margin-left: 12%;
+				box-shadow: 4px 4px 0px #aaaaaa88;
 
-</header>
-<body>
+			}
+			
+			.column {
+				float: left;
+				width: 33.33%;
+				margin-top: 20px;
+				margin-bottom: 20px;
+			}
+			
+			.row:after {
+				content: "";
+				display: table;
+				clear: both;
+			}
 
-</body>
+			@media screen and (max-width: 1320px) {
+				.column {
+					width: 50%;
+				}
+			}
+			.innerColumn {
+					box-shadow: 4px 4px 0px #aaaaaa;
+					width: 320px;
+					height: 240px;
+					margin-left: 15px;
+			}
+			.tab {
+				overflow: hidden;
+				background-color: #ffffff88;
+			}
+
+			.tab button {
+				background-color: inherit;
+				float: right;
+				border: none;
+				outline: none;
+				cursor: pointer;
+				padding: 14px 11.175%;
+				transition: 0.3s;
+			}
+
+			.tab button:hover {
+				background-color: #aaaaff;
+			}
+
+			.tab button.active {
+				background-color: #ddddff;
+			}
+
+			.tabcontent {
+			
+			}
+			.container {
+				position: relative;
+				width: 100%;
+			}
+
+			.container img {
+				width: 100%;
+				height: 100%;
+			}
+			.container .btn {
+				position: absolute;
+				top: 6%;
+				left: 96%;
+				transform: translate(-50%, -50%);
+				-ms-transform: translate(-50%, -50%);
+				font-size: 16px;
+				border-radius: 50%;
+				background-color: #8888ff;
+				width: 35px;
+				height: 35px;
+				text-align: center;
+				font-family: Serif;
+				cursor: pointer;
+				text-decoration: none;
+				color: black;
+			}
+			.column2 {
+				float: left;
+				width: 50%;
+				margin-top: 20px;
+				margin-bottom: 20px;
+			}
+			
+			.row2:after {
+				content: "";
+				display: table;
+				clear: both;
+			}
+
+			@media screen and (max-width: 1320px) {
+				.column2 {
+					width: 100%;
+				}
+			}
+			.imgcontainer1{
+				margin-left: 10%;
+
+			}
+			.container2 {
+				position: relative;
+				box-shadow: 4px 4px 0px #aaaaaa;
+				background-color:#ffffff88;
+				height:25%;
+				margin-left: 10px;
+				margin-right:10px;
+				margin-top: 20px;
+			}
+
+			.container2 .text {
+				position: absolute;
+				top: 12%;
+				left: 5%;
+				font-size: 16px;
+				font-family: Serif;
+			}
+			.container2 .txt {
+				position: absolute;
+				top: 5%;
+				left: 20%;
+				transform: translate(-50%, -50%);
+				-ms-transform: translate(-50%, -50%);
+				font-size: 24px;
+				font-family: Serif;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="TopBanner">
+			<div id="TopText">
+				Ruben het Paardje
+			</div>
+			<div class="tab">
+				<button class="tablinks" onclick="openCity(event, 'Contact')">Contact</button>
+				<button class="tablinks" onclick="openCity(event, 'Skills')">Skills</button>
+				<button class="tablinks" onclick="openCity(event, 'About')">About</button>
+				<button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
+			</div>
+		</div>
+			<div id="Home" class="tabcontent">
+				<div id="ColumnHolder">
+					<div class="column">
+						<div class="innerColumn">
+							<div class="container">
+								<img src="http://rubenhetpaardje.info/portfolio/MillHouse.png" height="8.75%" width="8.75%">
+								<a class="btn" href="http://rubenhetpaardje.info/portfolio/millhouse.html">
+									info
+								</a>  
+							</div> 
+						</div>
+					</div>
+					<div class="column">
+						<div class="innerColumn">
+							<div class="sketchfab-embed-wrapper">
+								<iframe width="320" height="240" src="https://sketchfab.com/models/e379d065c2674a5db7c437eef98e2a23/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
+								</iframe>
+							</div>
+						</div>
+					</div>
+					<div class="column">
+						<div class="innerColumn">
+							<div class="sketchfab-embed-wrapper">
+								<iframe width="320" height="240" src="https://sketchfab.com/models/332add3de2d749afbb17818f69fc76f7/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
+								</iframe>
+							</div>
+						</div>
+					</div>
+					<div class="column">
+						<div class="innerColumn">
+							<div class="sketchfab-embed-wrapper">
+								<iframe width="320" height="240" src="https://sketchfab.com/models/93a1c8554ff44ca1b8bac2436da2ce42/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
+								</iframe>
+							</div>
+						</div>
+					</div>
+					<div class="column">
+						<div class="innerColumn">
+							<div class="sketchfab-embed-wrapper">
+								<iframe width="320" height="240" src="https://sketchfab.com/models/7dd594ac86f44e8db5a866d2ad90c15d/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
+								</iframe>
+							</div>
+						</div>
+					</div>
+					<div class="column">
+						<div class="innerColumn">
+							<div class="sketchfab-embed-wrapper">
+								<iframe width="320" height="240" src="https://sketchfab.com/models/f59b5a688aa64da6b2d97201b0cc05c9/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
+								</iframe>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="About" class="tabcontent">
+				<div id="ColumnHolder">
+					<div class="column2">
+						<div class="imgcontainer1">
+							<img src="http://rubenhetpaardje.info/portfolio/MePosingCool1.jpg" height="75%" width="100%">
+						</div>
+					</div>					
+					<div class="column2">
+						<div class="container2">
+							<div class="txt">
+								My origin
+							</div>
+							<div class="text">
+								When i was 14 in middleschool i founded CortexArts together with Marc Frenken and some friends.
+								after graduating, I enrolled into the Saxion University of Applied Sciences to follow the Creative
+								Media and Game Technologies course. Currently I am a second year student.
+							</div>
+						</div>
+						<div class="container2">
+							<div class="txt">
+								My passion
+							</div>
+							<div class="text">
+								There is always more to learn, to do, to create and to see. My aim is to not only help myself
+								to discover everything the world has to offer and follow your passions but others aswell
+								To me, games are a great way to share both knowledge and experiences with the people around us
+								and i love being part of shaping worlds for others to explore.
+							</div>
+						</div>
+						<div class="container2">
+							<div class="txt">
+								My dream
+							</div>
+							<div class="text">
+								Revolutionising education through gamification could be considered my life long dream of archieving.
+								Making education personalised and enabling students to learn the way they want to learn with games
+								would drasticly improve education. Motivating the students of the future to learn and explore their
+								passions will lead to a better future for everyone.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="Skills" class="tabcontent">
+				<div id="ColumnHolder">
+				<div class="column2">
+					<div class="container2">
+						<div class="txt">
+							3D artist
+						</div>
+						<div class="text">
+							 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br>
+							 Aenean commodo ligula eget dolor. Aenean massa. Cum sociis<br>
+							 natoque penatibus et magnis dis parturient montes, nascetur<br>
+							 ridiculus mus. Donec quam felis, ultricies nec, pellentesque<br>
+							 eu, pretium quis, sem. Nulla consequat massa quis enim. Donec <br>
+							 pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.<br>
+							 In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.<br>
+							 Nullam dictum felis eu pede mollis pretium. Integer tincidunt.<br>
+							 Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate<br>
+							 eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,<br>
+							 eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,<br>
+						</div>
+					</div>
+				</div>
+				<div class="column2">
+					<div class="container2">
+						<img src="http://rubenhetpaardje.info/portfolio/MillHouse.png" height="100%" width="100%">
+					</div>
+				</div>
+				<div class="column2">
+					<div class="container2">
+						<img src="http://rubenhetpaardje.info/portfolio/ConceptArt.PNG" height="100%" width="100%">
+					</div>
+				</div>
+				<div class="column2">
+					<div class="container2">
+						<div class="txt">
+							Concept Artist
+						</div>
+						<div class="text">
+							 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br>
+							 Aenean commodo ligula eget dolor. Aenean massa. Cum sociis<br>
+							 natoque penatibus et magnis dis parturient montes, nascetur<br>
+							 ridiculus mus. Donec quam felis, ultricies nec, pellentesque<br>
+							 eu, pretium quis, sem. Nulla consequat massa quis enim. Donec <br>
+							 pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.<br>
+							 In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.<br>
+							 Nullam dictum felis eu pede mollis pretium. Integer tincidunt.<br>
+							 Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate<br>
+							 eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,<br>
+							 eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,<br>
+						</div>
+					</div>
+				</div>
+				<div class="column2">
+					<div class="container2">
+						<div class="txt">
+							Programmer
+						</div>
+						<div class="text">
+							 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br>
+							 Aenean commodo ligula eget dolor. Aenean massa. Cum sociis<br>
+							 natoque penatibus et magnis dis parturient montes, nascetur<br>
+							 ridiculus mus. Donec quam felis, ultricies nec, pellentesque<br>
+							 eu, pretium quis, sem. Nulla consequat massa quis enim. Donec <br>
+							 pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.<br>
+							 In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.<br>
+							 Nullam dictum felis eu pede mollis pretium. Integer tincidunt.<br>
+							 Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate<br>
+							 eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,<br>
+							 eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,<br>
+						</div>
+					</div>
+				</div>
+				<div class="column2">
+					<div class="container2">
+						<img src="http://rubenhetpaardje.info/portfolio/MillHouse.png" height="100%" width="100%">
+					</div>
+				</div>
+			</div>
+			</div>
+			<div id="Contact" class="tabcontent">
+				<div id="ColumnHolder">
+					<div class="column">
+						<div class="innerColumn">
+							Linked In
+						</div>
+					</div>
+					<div class="column">
+						<div class="innerColumn">
+							Email
+						</div>
+					</div>
+					<div class="column">
+						<div class="innerColumn">
+							Sketchfab
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	<script>
+		function openCity(evt, cityName) {
+		var i, tabcontent, tablinks;
+			tabcontent = document.getElementsByClassName("tabcontent");
+			for (i = 0; i < tabcontent.length; i++) {
+				tabcontent[i].style.display = "none";
+			}
+			tablinks = document.getElementsByClassName("tablinks");
+			for (i = 0; i < tablinks.length; i++) {
+				tablinks[i].className = tablinks[i].className.replace(" active", "");
+			}
+			document.getElementById(cityName).style.display = "block";
+			evt.currentTarget.className += " active";
+		}
+		document.getElementById("defaultOpen").click();
+		document.getElementById("infobutton").style.zIndex = "+1";
+	</script>
+		
+	</body>
 </html>
